--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <!-- link section  -->
     <div class="linkbar">
         <div class="link_social">
-            <span class="child_link"><b><i class="fa-brands fa-whatsapp"></i>Whatsapp</b>
-                <span>
-                    <span class="child_link"><b><i class="fa-brands fa-facebook"></i>Facebook</b>
-                        <span>
-                            <span class="child_link"><b>Linkdin<i class="fa-brands fa-linkedin"></i></b>
-                                <span>
-                                    <span class="child_link"><b><i class="fa-brands fa-slack"></i>Slack</b>
-                                        <span>
+            <p class="child_link "><b class="link_w"><i class="fa-brands fa-whatsapp"></i>Whatsapp</b>
+                <p>
+                    <p class="child_link"><b class="link_f"><i class="fa-brands fa-facebook"></i>Facebook</b>
+                        <p>
+                            <p class="child_link"><b class="link_l"><i class="fa-brands fa-linkedin"></i>Linkdin</b>
+                                <p>
+                                    <p class="child_link"><b class="link_s"><i class="fa-brands fa-slack"></i>Slack</b>
+                                        <p>
         </div>
     </div>
     <!-- link ssection end  -->
