--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                 result with realibity quality</p>
                 <table>
                     <tr>
-                        <td><b class="tb" style="font-size: 37px;">250+ <p>Project completed</p></b></td>
-                        <td><b class="tb" style="font-size: 37px;">100+ <p>community Network</p></b></td>
+                        <td><b class="tb range" style="font-size: 37px;">250+ <p>Project completed</p></b></td>
+                        <td><b class="tb range" style="font-size: 37px;">100+ <p>community Network</p></b></td>
                     </tr>
 
                      <tr>
-                        <td><b class="tb" style="font-size: 37px;">30+ <p>contract remote </p></b></td>
-                        <td><b class="tb" style="font-size: 37px;">10+ <p>years experiance</p></b></td>
+                        <td><b class="tb range" style="font-size: 37px;">30+ <p>contract remote </p></b></td>
+                        <td><b class="tb range" style="font-size: 37px;">10+ <p>years experiance</p></b></td>
                     </tr>
                 </table>
         </div>
